[gd_scene load_steps=2 format=3 uid="uid://cst6fj3qg1tt3"]

[ext_resource type="Script" path="res://components/audio_info_panel/audio_info_panel.gd" id="1_dtp48"]

[node name="AudioInfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
script = ExtResource("1_dtp48")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TextureRectStatus" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="LabelTitle" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "audio title"
clip_text = true

[node name="LabelAuthor" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "author"
clip_text = true

[node name="LabelDuration" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "00:00"

[node name="ReferenceRect" type="ReferenceRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
border_width = 0.0
